--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -108,6 +108,13 @@
   margin-left: 0.5rem;
 }
 .logo2 {
+  position: relative;
+  height: 20vw; 
+  width: 20vw;
+  min-height: 200px;
+  min-width: 200px;
+  max-height: 350px;
+  max-width: 350px;
   cursor: pointer;
 }
 
