--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 4rem;
 }
 
 .main {
@@ -41,8 +41,11 @@
 
 .title {
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  line-height: 1.35;
+  font-size: 5em;
+  font-family: cooper-black-std,serif;
+font-weight: 400;
+font-style: normal;
 }
 
 .title,
@@ -54,6 +57,9 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+  font-family: rubik,sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .code {
@@ -107,16 +113,7 @@
   height: 1em;
   margin-left: 0.5rem;
 }
-.logo2 {
-  position: relative;
-  height: 20vw; 
-  width: 20vw;
-  min-height: 200px;
-  min-width: 200px;
-  max-height: 350px;
-  max-width: 350px;
-  cursor: pointer;
-}
+
 
 @media (max-width: 600px) {
   .grid {
